# node_with_gn

./: .gitignore  .gitmodules  .gn  BUILD.gn  README.md
.github/workflows/: main.yml
gn_files/: LICENSE
gn_files/node/: BUILD.gn  node.gni  node_files.gni
gn_files/node/src/inspector/: BUILD.gn
gn_tools/: generate_config_gypi.py  generate_node_files_json.py  gypi_to_gn.py  run_executable_in_dir.py  run_in_dir.py  search_files.py
scripts/: bootstrap.js  build.js  common.js  download_gn.js  goma.js  setup_vs_toolchain.js
