# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

template("node_dep") {
  static_library(target_name) {
    forward_variables_from(invoker, "*", ["configs", "remove_configs"])
    if (defined(invoker.configs)) {
      configs += invoker.configs
    }
    if (is_posix) {
      configs -= [ "//build/config/gcc:symbol_visibility_hidden" ]
      configs += [ "//build/config/gcc:symbol_visibility_default" ]
    }
    if (defined(invoker.remove_configs)) {
      configs -= invoker.remove_configs
    }
  }
}
